Changing firebase config for new site location

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "wedding_website/_site",
     "ignore": [
       "firebase.json",
       "**/.*",
