--- a/wedding_website/_config.yml
+++ b/wedding_website/_config.yml
@@ -21,15 +21,13 @@
 title: Alyse and Max are Getting Married! June 8th, 2024
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+  Get ready for a wedding full of love, laughs and dancing! June Eighth, 2024 in Sun Valley, Idaho.
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://alyseandmax.com" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
 github_username:  maxfronek
 
-logo: "./assets/images/logos/monogram-AM-2.svg"
+logo: "./assets/images/logos/monogram-AM-4.svg"
 
 # Build settings
 theme: minima
