Adding a bunch of new pages and monograms
Getting close to ready for invite-ations!

Quick hits:

- Gallery page + masonry.js
- Redirect to RSVP form
- wedding party page
- Jekyll_redirect plugin
-

--- a/wedding_website/_config.yml
+++ b/wedding_website/_config.yml
@@ -27,12 +27,13 @@ url: "https://alyseandmax.com" # the base hostname & protocol for your site, e.g
 # twitter_username: jekyllrb
 github_username:  maxfronek
 
-logo: "./assets/images/logos/monogram-AM-4.svg"
+logo: "./assets/images/logos/AM_horizontal_lockup_2.svg"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from
 
 permalink: pretty
 
