--- a/wedding_website/_config.yml
+++ b/wedding_website/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Alyse and Max are Getting Married! June 8th, 2024
-email: your-email@example.com
+email: alyseandmax@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Get ready for a wedding full of love, laughs and dancing! June Eighth, 2024 in Sun Valley, Idaho.
 baseurl: "/" # the subpath of your site, e.g. /blog
